[package]
name = "stocks-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apca = "0.28.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
futures = "0.3"
serde_json = "1.0"
tokio-postgres = "0.7"
diesel = { version = "2.1.0", features = ["postgres"] }